tests/errors/CyclicTypeAlias2.hs
module CyclicTypeAlias2 () where

{-@ type CyclicC = [CyclicC] @-}

